# RedTeam

./: README.md  pyproject.toml
aegis/: __init__.py  adapters.py  cli.py  dashboard.py  report.py  runner.py  scorer.py
aegis/attacks/: bias.yaml  chained_attacks.yaml  hallucination.yaml  injections.yaml  jailbreaks.yaml  multi_turn_jailbreaks.yaml
redteam/: dashboard.py
