[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-llm"
version = "0.2.0"
description = "Adversarial testing CLI for LLMs"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx[asyncio]>=0.27",
    "pydantic>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
local = ["transformers>=4.40", "torch>=2.3", "accelerate>=0.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx[asyncio]"]

[project.scripts]
aegis = "aegis.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]
